--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -12,20 +12,20 @@
 <body>
                         <div class="card-list">
                                     <div class="card">
-                                                <img src="img/saitama.jpg">
+                                                <img src="../img/saitama.jpg">
                                                 <h2>Saitama</h2>
                                     </div>
 
                                     <div class="card">
-                                                <img src="img/genos.jpg">
+                                                <img src="../img/genos.jpg">
                                                 <h2>Genos</h2>
                                     </div>
                                     <div class="card">
-                                                <img src="img/garou.jpg">
+                                                <img src="../img/garou.jpg">
                                                 <h2>Garou</h2>
                                     </div>
                                     <div class="card">
-                                                <img src="img/king.jpg">
+                                                <img src="../img/king.jpg">
                                                 <h2>King</h2>
                                     </div>
                         </div>
